Update report template URL Use sandbox URL based on configured Cortex API URL

--- a/thehive-templates/Triage_1_0/long.html
+++ b/thehive-templates/Triage_1_0/long.html
@@ -2,8 +2,7 @@
         <div class="panel panel-heading"><strong>Triage Analyze</strong></div>
  <div>
             <div class="btn-group btn-group-justified" role="group">
-                <div class="btn-group" role="group"><a target="_blank" href="https://private.tria.ge/{{content.result.sample.id}}"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-link" aria-hidden="true"></span>Full Report</button></a></div>
-     
+                <div class="btn-group" role="group"><a target="_blank" href="{{content.url}}{{content.result.sample.id}}"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-link" aria-hidden="true"></span>Full Report</button></a></div>
             </div>
         </div>
     </div> 
@@ -100,4 +99,3 @@
         </dl>
     </div>
 </div>
-
