--- a/thehive-templates/MSEntraID_GetDirectoryAuditLogs_1_0/long.html
+++ b/thehive-templates/MSEntraID_GetDirectoryAuditLogs_1_0/long.html
@@ -1,4 +1,3 @@
-
 <!-- Success -->
 <div class="panel panel-danger" ng-if="success">
     <div class="panel-body">
@@ -26,8 +25,18 @@
                 </div>
             </div>
 
-            <!-- Directory Audits -->
-            <div class="panel" ng-if="content.directoryAudits && content.directoryAudits.length > 0">
+            <!-- No Directory Audits Found -->
+            <div class="panel" ng-if="content.directoryAudits && content.directoryAudits.length === 0">
+                <div class="panel-heading">
+                    <i class="fa fa-exclamation-triangle"></i> No Audit Logs Found
+                </div>
+                <div class="panel-body">
+                    <p>No directory audit logs were found for the given parameters.</p>
+                </div>
+            </div>
+
+            <!-- Directory Audit Logs Summary -->
+            <div class="panel" ng-if="content.directoryAudits.length > 0">
                 <div class="panel-heading">
                     <i class="fa fa-list"></i> Directory Audit Logs
                 </div>
@@ -45,12 +54,19 @@
                             <td>{{ audit.id }}</td>
                             <td>{{ audit.category }}</td>
                             <td>{{ audit.activityDisplayName }}</td>
-                            <td>{{ audit.result }}</td>
-                            <td>{{ audit.activityDateTime }}</td>
+                            <td>
+                                <span class="label" ng-class="{
+                                    'label-success': audit.result === 'success',
+                                    'label-danger': audit.result !== 'success'
+                                }">
+                                    {{ audit.result || 'N/A' }}
+                                </span>
+                            </td>
+                            <td>{{ audit.activityDateTime || 'N/A' }}</td>
                             <td>
                                 <span ng-if="audit.initiatedBy && audit.initiatedBy.user">
                                     {{ audit.initiatedBy.user.displayName || audit.initiatedBy.user.userPrincipalName || 'N/A' }}<br>
-                                    IP: {{ audit.initiatedBy.user.ipAddress || 'N/A' }}
+                                    <strong>IP:</strong> {{ audit.initiatedBy.user.ipAddress || 'N/A' }}
                                 </span>
                                 <span ng-if="audit.initiatedBy && audit.initiatedBy.app">
                                     (App: {{ audit.initiatedBy.app.appId || 'N/A' }})
@@ -59,77 +75,69 @@
                         </tr>
                     </table>
                 </div>
-
-                <!-- Detailed Logs -->
-                <div class="panel" ng-repeat="audit in content.directoryAudits">
-                    <div class="panel-heading">
-                        <i class="fa fa-info-circle"></i> Audit Details - {{ audit.id }}
-                    </div>
-                    <div>
-                        <table class="table">
-                            <tr>
-                                <td><strong>Correlation ID</strong></td>
-                                <td>{{ audit.correlationId || 'N/A' }}</td>
-                            </tr>
-                            <tr>
-                                <td><strong>Operation Type</strong></td>
-                                <td>{{ audit.operationType || 'N/A' }}</td>
-                            </tr>
-                            <tr>
-                                <td><strong>Logged By Service</strong></td>
-                                <td>{{ audit.loggedByService || 'N/A' }}</td>
-                            </tr>
-                            <tr>
-                                <td><strong>Result Reason</strong></td>
-                                <td>{{ audit.resultReason || 'N/A' }}</td>
-                            </tr>
-
-                            <!-- Target Resources -->
-                            <tr ng-if="audit.targetResources && audit.targetResources.length > 0">
-                                <td><strong>Target Resources</strong></td>
-                                <td>
-                                    <table class="table">
-                                        <tr>
-                                            <th>Type</th>
-                                            <th>Display Name</th>
-                                            <th>User Principal Name</th>
-                                        </tr>
-                                        <tr ng-repeat="resource in audit.targetResources">
-                                            <td>{{ resource.type || 'N/A' }}</td>
-                                            <td>{{ resource.displayName || 'N/A' }}</td>
-                                            <td>{{ resource.userPrincipalName || 'N/A' }}</td>
-                                        </tr>
-                                    </table>
-                                </td>
-                            </tr>
-
-                            <!-- Additional Details -->
-                            <tr ng-if="audit.additionalDetails && audit.additionalDetails.length > 0">
-                                <td><strong>Additional Details</strong></td>
-                                <td>
-                                    <table class="table">
-                                        <tr>
-                                            <th>Key</th>
-                                            <th>Value</th>
-                                        </tr>
-                                        <tr ng-repeat="detail in audit.additionalDetails">
-                                            <td>{{ detail.key }}</td>
-                                            <td>{{ detail.value }}</td>
-                                        </tr>
-                                    </table>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-
             </div>
-            <!-- No Directory Audits -->
-            <div class="panel" ng-if="content.directoryAudits && content.directoryAudits.length === 0">
-                <div class="panel-heading">
-                    <i class="fa fa-info-circle"></i> No Audit Logs
+
+            <!-- Collapsible Detailed Logs -->
+            <div class="panel" ng-repeat="audit in content.directoryAudits">
+                <div class="panel-heading" ng-click="audit.expanded = !audit.expanded" style="cursor:pointer;">
+                    <i class="fa fa-info-circle"></i> Audit Details - {{ audit.id }}
                 </div>
-                <div>No directory audit logs found for the given parameters.</div>
+                <div ng-if="audit.expanded">
+                    <table class="table">
+                        <tr>
+                            <td><strong>Correlation ID</strong></td>
+                            <td>{{ audit.correlationId || 'N/A' }}</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Operation Type</strong></td>
+                            <td>{{ audit.operationType || 'N/A' }}</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Logged By Service</strong></td>
+                            <td>{{ audit.loggedByService || 'N/A' }}</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Result Reason</strong></td>
+                            <td>{{ audit.resultReason || 'N/A' }}</td>
+                        </tr>
+
+                        <!-- Target Resources -->
+                        <tr ng-if="audit.targetResources && audit.targetResources.length > 0">
+                            <td><strong>Target Resources</strong></td>
+                            <td>
+                                <table class="table">
+                                    <tr>
+                                        <th>Type</th>
+                                        <th>Display Name</th>
+                                        <th>User Principal Name</th>
+                                    </tr>
+                                    <tr ng-repeat="resource in audit.targetResources">
+                                        <td>{{ resource.type || 'N/A' }}</td>
+                                        <td>{{ resource.displayName || 'N/A' }}</td>
+                                        <td>{{ resource.userPrincipalName || 'N/A' }}</td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+
+                        <!-- Additional Details -->
+                        <tr ng-if="audit.additionalDetails && audit.additionalDetails.length > 0">
+                            <td><strong>Additional Details</strong></td>
+                            <td>
+                                <table class="table">
+                                    <tr>
+                                        <th>Key</th>
+                                        <th>Value</th>
+                                    </tr>
+                                    <tr ng-repeat="detail in audit.additionalDetails">
+                                        <td>{{ detail.key }}</td>
+                                        <td>{{ detail.value }}</td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
