- update: improved error handling. Ctiscan others artifact support.

--- a/thehive-templates/ONYPHE_Ctiscan_1_0/long.html
+++ b/thehive-templates/ONYPHE_Ctiscan_1_0/long.html
@@ -90,7 +90,7 @@
                 <tbody>
                     <tr ng-if="r.component.text">
                         <td width="200">Component(s)</td>
-                        <td class="wrap"><span ng-repeat="ponent in r.component.text">{{ ponent }}</span><br></span></td>
+                        <td class="wrap"><span ng-repeat="ponent in r.component.text">{{ ponent }}<br></span></td>
                     </tr>
                     <tr ng-if="r.component.cpe">
                         <td width="200">CPE(s)</td>
