Update long.html - Dynamic display of attributes for LDAP 3.0

--- a/thehive-templates/Ldap_Query_3_0/long.html
+++ b/thehive-templates/Ldap_Query_3_0/long.html
@@ -1,108 +1,70 @@
-<!-- Success -->
-<!-- This template directly depends on LDAP attributes, so, it need to be adapted to your needs. -->
-<!-- Add, modify or remove all the 'xxx' in all variable {{result.xxx}} as you will. -->
-<div ng-repeat="result in ::content.results | limitTo:5" ng-if="success && content.results.length > 0">
-    <div class="panel panel-info">
-        <div class="panel-heading">
-            {{result.cn}} - {{result.uid}}
-        </div>
-        <div class="panel-body">
-            <div class="row">
-                <div class="col-md-6">
-                  <dl class="dl-horizontal" ng-if="::result.cn">
-                      <dt>Full Name</dt>
-                      <dd class="wrap">{{result.cn}}</dd>
-                  </dl>
-                </div>
-                <div class="col-md-6">
-                    <dl class="dl-horizontal" ng-if="::result.title">
-                        <dt>Country</dt>
-                        <dd class="wrap">{{result.c}}</dd>
-                    </dl>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                  <dl class="dl-horizontal" ng-if="::result.mail">
-                      <a href="mailto:{{result.mail}}"><dt>E-mail</dt></a>
-                      <dd class="wrap">{{result.mail}}</dd>
-                  </dl>
-                </div>
-                <div class="col-md-6">
-                    <dl class="dl-horizontal" ng-if="::result.uid">
-                        <dt>UID</dt>
-                        <dd class="wrap">{{result.uid}}</dd>
-                    </dl>
-                </div>
-            </div>
-        </div>
+<!-- Success: Dynamic display (limited to 5 results) -->
+<div ng-if="success && content.results.length > 0">
+    <div class="panel panel-success" ng-repeat="result in content.results | limitTo:5">
+      <div class="panel-heading">
+          <strong>{{ result.cn || result.uid || ('LDAP Result ' + ($index + 1)) }}</strong>
+      </div>
+      <div class="panel-body">
+          <dl class="dl-horizontal">
+              <div ng-if="result.cn">
+                  <dt>Full Name</dt>
+                  <dd class="wrap">{{result.cn}}</dd>
+              </div>
+              <div ng-if="result.mail">
+                  <dt>Email</dt>
+                  <dd class="wrap"><a href="mailto:{{result.mail}}">{{result.mail}}</a></dd>
+              </div>
+              <div ng-if="result.uid">
+                  <dt>UID</dt>
+                  <dd class="wrap">{{result.uid}}</dd>
+              </div>
+              <!-- Dynamically show other attributes -->
+              <div ng-repeat="(attr, value) in result" ng-if="attr !== 'cn' && attr !== 'mail' && attr !== 'uid'">
+                    <div>
+                        <dt>{{ attr | uppercase }}</dt>
+                        <dd class="wrap">{{ value }}</dd>
+                    </div>
+                </div> 
+          </dl>
+      </div>
     </div>
 </div>
-
-<!-- Success but no result -->
-<div ng-if="success && content.results.length === 0">
-    <div class="panel panel-info">
-        <div class="panel-heading">
-            No result
-        </div>
-        <div class="panel-body">
-            <div class="row">
-                <div class="col-md-12">
-                  <dl class="dl-horizontal">
-                      <dt>Message</dd>
-                      <dd class="wrap"><b>LdapQuery was successfuly executed but returned no result.</b></dd>
-                  </dl>
-                </div>
-            </div>
-        </div>
-    </div>
+  
+<!-- No results found -->
+<div class="panel panel-info" ng-if="success && content.results.length === 0">
+      <div class="panel-heading">
+          <strong>No results found</strong>
+      </div>
+      <div class="panel-body">
+          <p>No LDAP entries matched your query.</p>
+      </div>
 </div>
-
-<!-- Filtered resluts -->
+  
+<!-- Filtered results -->
 <div class="panel panel-warning" ng-if="success && content.filtered">
-    <div class="panel-heading">
-        {{content.filtered.data}}
-    </div>
-    <div class="panel-body">
-        <div class="row">
-            <div class="col-md-12">
-              <dl class="dl-horizontal" ng-if="content.filtered.message">
-                  <dt>Message</dt>
-                  <dd class="wrap"><b>{{content.filtered.message}}</b></dd>
-              </dl>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-              <dl class="dl-horizontal" ng-if="content.filtered.data">
-                  <dt>Data</dt>
-                  <dd class="wrap">{{content.filtered.data}}</dd>
-              </dl>
-            </div>
-            <div class="col-md-6">
-                <dl class="dl-horizontal" ng-if="content.filtered.data_type">
-                    <dt>Data type</dt>
-                    <dd class="wrap">{{content.filtered.data_type}}</dd>
-                </dl>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-              <dl class="dl-horizontal" ng-if="content.filtered.whitelist">
-                  <dt>Whitelist</dt>
-                  <dd class="wrap">{{content.filtered.whitelist}}</dd>
-              </dl>
-            </div>
-        </div>
-    </div>
+      <div class="panel-heading">
+          <strong>Filtered LDAP Query</strong>
+      </div>
+      <div class="panel-body">
+          <dl class="dl-horizontal">
+              <dt>Message</dt>
+              <dd class="wrap">{{content.filtered.message}}</dd>
+              <dt>Data</dt>
+              <dd class="wrap">{{content.filtered.data}}</dd>
+              <dt>Data type</dt>
+              <dd class="wrap">{{content.filtered.data_type}}</dd>
+              <dt>Whitelist</dt>
+              <dd class="wrap">{{content.filtered.whitelist}}</dd>
+          </dl>
+      </div>
 </div>
-
-<!-- General error  -->
+  
+<!-- General error -->
 <div class="panel panel-danger" ng-if="!success">
-    <div class="panel-heading">
-        <strong>{{(artifact.data || artifact.attachment.name) | fang}}</strong>
-    </div>
-    <div class="panel-body">
-        {{content.errorMessage}}
-    </div>
-</div>
+      <div class="panel-heading">
+          <strong>Error during LDAP query</strong>
+      </div>
+      <div class="panel-body">
+          <p>{{content.errorMessage}}</p>
+      </div>
+</div>  
